# enums

./: Makefile  README.md  pyproject.toml
src/: engineer.py  enums.py
tests/: test_enums.py
