[tool.poetry]
name = "enums"
version = "0.1.0"
description = "Enums examples for the blog post"
authors = ["Pedro López Mareque <pedro.lopez.mareque@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
expects = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
